Remove asterisks from shelf location label in book addition form

--- a/views/admin/admin_add_book.ejs
+++ b/views/admin/admin_add_book.ejs
@@ -139,7 +139,7 @@
 
     <!-- LOKASI RAK (POPUP MAP) -->
     <div>
-        <label class="font-medium mb-2 block">Lokasi Rak <span class="text-red-500">*</span></label>
+        <label class="font-medium mb-2 block">Lokasi Rak</label>
         <div class="flex flex-col sm:flex-row items-stretch sm:items-center gap-3">
             <input type="hidden" name="shelf_location" id="shelf_location" value="">
             <div id="shelf-location-display" class="flex-1 p-2 border border-gray-300 rounded bg-gray-50 text-gray-600">
